fixed z-index of connection bar; added more description for my project

--- a/src/connectionbar/ConnectionBar.css
+++ b/src/connectionbar/ConnectionBar.css
@@ -7,6 +7,7 @@
     flex-direction: row;
     /* position: fixed;
     bottom: 0; */
+    z-index: 1;
 }
 
 .sticky {
